Break word wrap to prevent overflow

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body,
   max-width: 850px;
   margin: 0 auto;
   padding: 20px;
+  word-wrap: break-word;
 }
 
 section {
